Update with some video previews ready
Updated "Works" page with video previews

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <div id="tv">
             <div id="tv-screen">
                 <video controls autoplay muted preload id="reel" class="screen">
-                    <source src="portfolio/video/JCM_Reel-2023.mp4" type=video/mp4>
+                    <source src="portfolio/video/JCM_Reel-2023.mp4" type="video/mp4">
                     Your browser does not support the video tag. Consider updating your browser.
                 </video>
             </div>
