--- a/resume/index.html
+++ b/resume/index.html
@@ -21,10 +21,6 @@
         <link rel="shortcut icon" href="../favicon/favicon.ico">
         <meta name="msapplication-TileImage" content="../favicon/mstile-144x144.png">
         <meta name="msapplication-config" content="../favicon/browserconfig.xml">
-        <!-- Javascript -->
-        <script src="https://code.jquery.com/jquery-3.6.0.min.js"
-            integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-        <script type="text/javascript" src="resume.js"></script>
         <!-- Stylesheets -->
         <link rel="stylesheet" href="../main.css" type="text/css">
         <link rel="stylesheet" href="resume.css" type="text/css"> <!--I need this line to show up-->
@@ -128,16 +124,30 @@
                         <div id="res_edu">
                             <h1>Education</h1>
                             <h2>Savannah College of Art and Design</h2>
-                            <div class="res_body">2007 - 2009 | Bachelor of Fine Arts, Animation</div>
+                            <h3>2007 - 2009</h3>
+                            <div class="res_body">
+                                <ul>
+                                    <li>
+                                        Bachelor of Fine Arts, Animation
+                                    </li>
+                                </ul>
+                            </div>
                             <h2>Flagler College</h2>
-                            <div class="res_body">2003 - 2005 | Fine Arts Studies</div>
+                            <h3>2003 - 2005</h3>
+                            <div class="res_body">
+                                <ul>
+                                    <li>
+                                        Fine Arts Studies
+                                    </li>
+                                </ul>
+                            </div>
                         </div>
                     </td>
                     <td id="right_resume">
                         <h1>Work Experience</h1>
                         <h2>Art &amp; Design Optimization Specialist</h2>
+                        <h3>Custom Ink | Jan 2015 - Mar 2023</h3>
                         <div class="res_body" id="work_exp">
-                            <h3>Custom Ink | Jan 2015 - Mar 2023</h3>
                             <ul>
                                 <li>Developed, improved, and maintained the processes,
                                     resources, and overall performance of the Art &amp;
@@ -163,8 +173,8 @@
                             </ul>
                         </div>
                         <h2>Lead - Expert Production Artist Lead</h2>
+                        <h3>Custom Ink | Mar 2014 - Jan 2015</h3>
                         <div class="res_body" id="work_exp">
-                            <h3>Custom Ink | Mar 2014 - Jan 2015</h3>
                             <ul>
                                 <li>Produced engaging graphics, animations, print materials,
                                     and communications for the Expert Production Art team's
@@ -182,8 +192,8 @@
                             </ul>
                         </div>
                         <h2>Graphic Artist | Website Design</h2>
+                        <h3>Various | 2007 - 2023</h3>
                         <div class="res_body" id="work_exp">
-                            <h3>Various | 2007 - 2023</h3>
                             <ul>
                                 <li>
                                     <strong>Neptune Ice</strong> | CSS &amp; HTML for front-end
@@ -204,8 +214,8 @@
                         </div>
                         <h1>Achievements &amp; More</h1>
                         <h2>Participant - 48 Hour Film Project, Washington D.C.</h2>
+                        <h3>2018</h3>
                         <div class="res_body" id="work_exp">
-                            <h3>2018</h3>
                             <ul>
                                 <li>Editing, mixing, &amp; A/V enhancing in a short film created over a weekend
                                     among a small group.
@@ -213,8 +223,8 @@
                             </ul>
                         </div>
                         <h2>Effective Facilitator - Leadership Strategies</h2>
+                        <h3>2019</h3>
                         <div class="res_body" id="work_exp">
-                            <h3>2019</h3>
                             <ul>
                                 <li>A 4-day course on learning and practicing effective meeting facilitation
                                     tools and techniques.
