--- a/works/index.html
+++ b/works/index.html
@@ -21,10 +21,6 @@
         <link rel="shortcut icon" href="../favicon/favicon.ico">
         <meta name="msapplication-TileImage" content="../favicon/mstile-144x144.png">
         <meta name="msapplication-config" content="../favicon/browserconfig.xml">
-        <!-- Javascript -->
-        <script src="https://code.jquery.com/jquery-3.6.0.min.js"
-            integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-        <script type="text/javascript" src="works.js"></script>
         <!-- Stylesheets -->
         <link rel="stylesheet" href="../main.css" type="text/css">
         <link rel="stylesheet" href="works.css" type="text/css">
@@ -62,27 +58,69 @@
         </div>
         <div class="title_container">
             <div class="title_bg"></div>
-            <div class="section-title">works - graphic design</div>
-        </div>
-        <div class="section_container">
-            <div class="main_body_container">
-                <div class="section_body_text">
-                    <text style="font-style: italic">Updates coming soon...</text>
-                    <br/><br/>
-                    Graphic design examples | <a href="../images/J_Caleb_McTwigan-Graphic_Design_Logo_and_Typography_Portfolio.pdf" class="dl_link">PDF</a>
-                </div>
-            </div>
-        </div>
-        <div class="title_container">
-            <div class="title_bg"></div>
             <div class="section-title">works - motion graphics &amp; video</div>
         </div>
         <div class="section_container">
             <div class="main_body_container">
                 <div class="section_body_text">
-                    <text style="font-style: italic">Updates coming soon...</text>
+                    <div class="works_container">
+                        <div class="workbox"> <!-- Raindrops -->
+                            <h2>Raindrops</h2>
+                            <div class="work_video" onmouseover="getElementById('raindrops').play()" onmouseout="getElementById('raindrops').pause()">
+                                <div class="works_captions"><p>Created with Illustrator, After Effects, and Maya</p></div>
+                                <div class="thumbs" id="thumb-raindrops"></div>
+                                <video muted preload disablepictureinpicture id="raindrops" loop>
+                                    <source src="previews/raindrops.webm" type="video/webm">Your browser does not support the video tag. Consider updating your browser.
+                                </video>
+                            </div>
+                        </div>
+                        <div class="workbox"> <!-- DE Video -->
+                            <h2>Design Elevation Promotion Video</h2>
+                            <div class="work_video" onmouseover="getElementById('de_video').play()" onmouseout="getElementById('de_video').pause()">
+                                <div class="works_captions"><p>Created with Premiere, After Effects, and Illustrator</p></div>
+                                <div class="thumbs" id="thumb-de_video"></div>
+                                <video muted preload disablepictureinpicture id="de_video" loop>
+                                    <source src="previews/de_video.webm" type="video/webm">Your browser does not support the video tag. Consider updating your browser.
+                                </video>
+                            </div>
+                        </div>
+                        <div class="workbox"> <!-- Curious -->
+                            <h2>Furiously Curious</h2>
+                            <div class="work_video" onmouseover="getElementById('curious').play()" onmouseout="getElementById('curious').pause()">
+                                <div class="works_captions"><p>Created with After Effects and Illustrator</p></div>
+                                <div class="thumbs" id="thumb-curious"></div>
+                                <video muted preload disablepictureinpicture id="curious" loop>
+                                    <source src="previews/curious.webm" type="video/webm">Your browser does not support the video tag. Consider updating your browser.
+                                </video>
+                            </div>
+                        </div>
+                        <div class="workbox"> <!-- Bank Shot -->
+                            <h2>Bank Shot (48 hour film project)</h2>
+                            <div class="work_video" onmouseover="getElementById('bank_shot').play()" onmouseout="getElementById('bank_shot').pause()">
+                                <div class="works_captions"><p>Editing, color grading, sound syncing & enhancement in Premiere</p></div>
+                                <div class="thumbs" id="thumb-bank_shot"></div>
+                                <video muted preload disablepictureinpicture id="bank_shot" loop>
+                                    <source src="previews/bank_shot.webm" type="video/webm">Your browser does not support the video tag. Consider updating your browser.
+                                </video>
+                            </div>
+                        </div>
+                        <!-- <i>Updates coming soon...</i>
+                        <br/><br/>
+                        View the reel | <a href="../index.html" class="dl_link">home</a> -->
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="title_container">
+            <div class="title_bg"></div>
+            <div class="section-title">works - graphic design</div>
+        </div>
+        <div class="section_container">
+            <div class="main_body_container">
+                <div class="section_body_text">
+                    <i>Updates coming soon...</i>
                     <br/><br/>
-                    View the reel | <a href="../index.html" class="dl_link">home</a>
+                    Graphic design examples | <a href="../images/J_Caleb_McTwigan-Graphic_Design_Logo_and_Typography_Portfolio.pdf" class="dl_link">PDF</a>
                 </div>
             </div>
         </div>
