--- a/works/index.html
+++ b/works/index.html
@@ -62,52 +62,81 @@
         </div>
         <div class="section_container">
             <div class="main_body_container">
-                <div class="section_body_text">
-                    <div class="works_container">
-                        <div class="workbox"> <!-- Raindrops -->
-                            <h2>Raindrops</h2>
-                            <div class="work_video" onmouseover="getElementById('raindrops').play()" onmouseout="getElementById('raindrops').pause()">
-                                <div class="works_captions"><p>Created with Illustrator, After Effects, and Maya</p></div>
-                                <div class="thumbs" id="thumb-raindrops"></div>
-                                <video muted preload disablepictureinpicture id="raindrops" loop>
-                                    <source src="previews/raindrops.webm" type="video/webm">Your browser does not support the video tag. Consider updating your browser.
-                                </video>
-                            </div>
+                <div class="works_container">
+                    <div class="workbox"> <!-- Raindrops -->
+                        <h2>Raindrops</h2>
+                        <div class="work_video" onmouseover="getElementById('raindrops').play()" onmouseout="getElementById('raindrops').pause()">
+                            <div class="works_captions"><p>Created with Illustrator, After Effects, and Maya</p></div>
+                            <div class="thumbs" id="thumb-raindrops"></div>
+                            <video muted preload disablepictureinpicture id="raindrops" loop>
+                                <source src="previews/raindrops.webm" type="video/webm">Your browser does not support the video tag. Consider updating your browser.
+                            </video>
                         </div>
-                        <div class="workbox"> <!-- DE Video -->
-                            <h2>Design Elevation Promotion Video</h2>
-                            <div class="work_video" onmouseover="getElementById('de_video').play()" onmouseout="getElementById('de_video').pause()">
-                                <div class="works_captions"><p>Created with Premiere, After Effects, and Illustrator</p></div>
-                                <div class="thumbs" id="thumb-de_video"></div>
-                                <video muted preload disablepictureinpicture id="de_video" loop>
-                                    <source src="previews/de_video.webm" type="video/webm">Your browser does not support the video tag. Consider updating your browser.
-                                </video>
-                            </div>
-                        </div>
-                        <div class="workbox"> <!-- Curious -->
-                            <h2>Furiously Curious</h2>
-                            <div class="work_video" onmouseover="getElementById('curious').play()" onmouseout="getElementById('curious').pause()">
-                                <div class="works_captions"><p>Created with After Effects and Illustrator</p></div>
-                                <div class="thumbs" id="thumb-curious"></div>
-                                <video muted preload disablepictureinpicture id="curious" loop>
-                                    <source src="previews/curious.webm" type="video/webm">Your browser does not support the video tag. Consider updating your browser.
-                                </video>
-                            </div>
-                        </div>
-                        <div class="workbox"> <!-- Bank Shot -->
-                            <h2>Bank Shot (48 hour film project)</h2>
-                            <div class="work_video" onmouseover="getElementById('bank_shot').play()" onmouseout="getElementById('bank_shot').pause()">
-                                <div class="works_captions"><p>Editing, color grading, sound syncing & enhancement in Premiere</p></div>
-                                <div class="thumbs" id="thumb-bank_shot"></div>
-                                <video muted preload disablepictureinpicture id="bank_shot" loop>
-                                    <source src="previews/bank_shot.webm" type="video/webm">Your browser does not support the video tag. Consider updating your browser.
-                                </video>
-                            </div>
-                        </div>
-                        <!-- <i>Updates coming soon...</i>
-                        <br/><br/>
-                        View the reel | <a href="../index.html" class="dl_link">home</a> -->
                     </div>
+                    <div class="workbox"> <!-- DE Video -->
+                        <h2>Design Elevation Promotion Video</h2>
+                        <div class="work_video" onmouseover="getElementById('de_video').play()" onmouseout="getElementById('de_video').pause()">
+                            <div class="works_captions"><p>Created with Premiere, After Effects, and Illustrator</p></div>
+                            <div class="thumbs" id="thumb-de_video"></div>
+                            <video muted preload disablepictureinpicture id="de_video" loop>
+                                <source src="previews/de_video.webm" type="video/webm">Your browser does not support the video tag. Consider updating your browser.
+                            </video>
+                        </div>
+                    </div>
+                    <div class="workbox"> <!-- Curious -->
+                        <h2>Furiously Curious</h2>
+                        <div class="work_video" onmouseover="getElementById('curious').play()" onmouseout="getElementById('curious').pause()">
+                            <div class="works_captions"><p>Created with After Effects and Illustrator</p></div>
+                            <div class="thumbs" id="thumb-curious"></div>
+                            <video muted preload disablepictureinpicture id="curious" loop>
+                                <source src="previews/curious.webm" type="video/webm">Your browser does not support the video tag. Consider updating your browser.
+                            </video>
+                        </div>
+                    </div>
+                    <div class="workbox"> <!-- Bank Shot -->
+                        <h2>Bank Shot (48 hour film project)</h2>
+                        <div class="work_video" onmouseover="getElementById('bank_shot').play()" onmouseout="getElementById('bank_shot').pause()">
+                            <div class="works_captions"><p>Editing, color grading, sound syncing & enhancement in Premiere</p></div>
+                            <div class="thumbs" id="thumb-bank_shot"></div>
+                            <video muted preload disablepictureinpicture id="bank_shot" loop>
+                                <source src="previews/bank_shot.webm" type="video/webm">Your browser does not support the video tag. Consider updating your browser.
+                            </video>
+                        </div>
+                    </div>
+                    <div class="workbox"> <!-- Stopping by Woods on a Snowy Evening -->
+                        <h2>Stopping by Woods on a Snowy Evening</h2>
+                        <div class="work_video" onmouseover="getElementById('snowy').play()" onmouseout="getElementById('snowy').pause()">
+                            <div class="works_captions"><p>Created with Illustrator, After Effects, and scanned mixed media.</p></div>
+                            <div class="thumbs" id="thumb-snowy"></div>
+                            <video muted preload disablepictureinpicture id="snowy" loop>
+                                <source src="previews/snowy.webm" type="video/webm">Your browser does not support the video tag. Consider updating your browser.
+                            </video>
+                        </div>
+                    </div>
+                    <div class="workbox"> <!-- Busy Season Video (Start) -->
+                        <h2>Busy Season Engagement Video</h2>
+                        <div class="work_video" onmouseover="getElementById('busy_start').play()" onmouseout="getElementById('busy_start').pause()">
+                            <div class="works_captions"><p>Created with Illustrator and After Effects.</p></div>
+                            <div class="thumbs" id="thumb-busy_start"></div>
+                            <video muted preload disablepictureinpicture id="busy_start" loop>
+                                <source src="previews/busy_start.webm" type="video/webm">Your browser does not support the video tag. Consider updating your browser.
+                            </video>
+                        </div>
+                    </div>
+                    <div class="workbox"> <!-- Busy Season Video (End) -->
+                        <h2>Busy Season Engagement Video - Wrap</h2>
+                        <div class="work_video" onmouseover="getElementById('busy_end').play()" onmouseout="getElementById('busy_end').pause()">
+                            <div class="works_captions"><p>Created with Illustrator, After Effects, and Premiere.</p></div>
+                            <div class="thumbs" id="thumb-busy_end"></div>
+                            <video muted preload disablepictureinpicture id="busy_end" loop>
+                                <source src="previews/busy_end.webm" type="video/webm">Your browser does not support the video tag. Consider updating your browser.
+                            </video>
+                        </div>
+                    </div>
+                    <!-- BLANK BOX -->
+                    <div class="workbox">
+                    </div>
+                    <!-- END BLANK BOX -->
                 </div>
             </div>
         </div>
@@ -124,5 +153,25 @@
                 </div>
             </div>
         </div>
+        <!--
+        <div class="section_container">
+            <div class="main_body_container">
+                <div class="works_container">
+                    <div class="workbox"> 
+                        <h2>Custom Playing Cards</h2>
+                        <div class="design_img">
+                            <div class="works_captions"><p>Designs created with Illustrator, rendered with Adobe Dimension</p></div>
+                            <div class="thumbs" id="thumb-playingcards"></div>
+                        </div>
+                    </div>
+                    <div class="workbox">
+                        <h2>Sandman Mascot Design</h2>
+                        <div class="design_img">
+                            <div class="works_captions"><p>Created with Illustrator</p></div>
+                            <div class="thumbs" id="thumb-sandman"></div>
+                        </div>
+                    </div>
+            </div>
+        </div> -->
     </body>
 </html>
