Formatting Updates and Graphic Design Samples added
Added all graphic design samples
Background formatting
Sticky headers
and more!

--- a/about-me/index.html
+++ b/about-me/index.html
@@ -56,59 +56,57 @@
                 </div>
             </div>
         </div>
-        <div class="title_container">
-            <div class="title_bg"></div>
-            <div class="section-title">about me</div>
-        </div>
-        <div class="section_container">
-            <div id="about_content">
-                <table id="about_table">
-                    <tr colspan="2">
-                        <td>
-                            <h1>Hi, I'm Caleb McTwigan</h1>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <div class="section_body_text">I am a motion graphics animator, graphic designer, & video/audio editor, producing compelling stories for brands
-                                and concepts. With more than 16 years combined experience, I like to utilize a broad set of techniques to find new and innovative
-                                ways to create impressive & unique content.
-                                <br/><br/>
-                                I have spent most of my career working in art, or in conjunction with artists.
-                                This includes having roles as:
-                                <ul>
-                                    <li>Motion Designer</li>
-                                    <li>Graphic Designer & Illustrator</li>
-                                    <li>Website Designer & Developer</li>
-                                    <li>Audio & Video Creation</li>
-                                    <li>Script & Code Writer</li>
-                                    <li>Art Workflow Optimization</li>
-                                    <li>Project Manager</li>
-                                    <li>Report Developer</li>
-                                </ul>
-                                
-                            </div>
-                        </td>
-                        <td>
-                            <div id="profile_pic">
-                                <img src="../images/bio-pic.png" alt="Profile pic | Caleb McTwigan" />
-                            </div>
-                        </td>
-                    </tr>
-                    <tr colspan="2">
-                        <td>
-                            <div>
-                                Outside of my creative and professional endeavors, you may find me watching a movie or show, reading a
-                                good children's book... to my children, attempting to cling on to my dominance over the aforementioned
-                                children at video games, or narrowly avoiding electrocuting, maiming, or injuring myself while doing some
-                                DIY projects at home!
-                                <br/><br/>
-                                <h2>Contact</h2>
-                                For inquiries and opportunities to work together, email me at <a href="mailto:caleb.mctwigan@gmail.com">caleb.mctwigan@gmail.com</a>
-                            </div>
-                        </td>
-                    </tr>
-                </table>
+        <div class="section_title">about me</div>
+        <div class="coral_bg">
+            <div class="section_container">
+                <div id="about_content">
+                    <table id="about_table">
+                        <tr colspan="2">
+                            <td>
+                                <h1>Hi, I'm Caleb McTwigan</h1>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <div class="section_body_text">I am a motion graphics animator, graphic designer, & video/audio editor, producing compelling stories for brands
+                                    and concepts. With more than 16 years combined experience, I like to utilize a broad set of techniques to find new and innovative
+                                    ways to create impressive & unique content.
+                                    <br/><br/>
+                                    I have spent most of my career working in art, or in conjunction with artists.
+                                    This includes having roles as:
+                                    <ul>
+                                        <li>Motion Designer</li>
+                                        <li>Graphic Designer & Illustrator</li>
+                                        <li>Website Designer & Developer</li>
+                                        <li>Audio & Video Creation</li>
+                                        <li>Script & Code Writer</li>
+                                        <li>Art Workflow Optimization</li>
+                                        <li>Project Manager</li>
+                                        <li>Report Developer</li>
+                                    </ul>
+                                </div>
+                            </td>
+                            <td>
+                                <div id="profile_pic">
+                                    <img src="../images/bio-pic.png" alt="Profile pic | Caleb McTwigan" />
+                                </div>
+                            </td>
+                        </tr>
+                        <tr colspan="2">
+                            <td>
+                                <div>
+                                    Outside of my creative and professional endeavors, you may find me watching a movie or show, reading a
+                                    good children's book... to my children, attempting to cling on to my dominance over the aforementioned
+                                    children at video games, or narrowly avoiding electrocuting, maiming, or injuring myself while doing some
+                                    DIY projects at home!
+                                    <br/><br/>
+                                    <h2>Contact</h2>
+                                    For inquiries and opportunities to work together, email me at <a href="mailto:caleb.mctwigan@gmail.com">caleb.mctwigan@gmail.com</a>
+                                </div>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
             </div>
         </div>
     </body>
