--- a/works/index.html
+++ b/works/index.html
@@ -273,10 +273,9 @@
                             </a>
                             <div class="works_desc"><p>Created with Illustrator</p></div>
                         </div>
-                        <!-- Graphic design examples | <a href="../images/J_Caleb_McTwigan-Graphic_Design_Logo_and_Typography_Portfolio.pdf" class="dl_link">PDF</a> -->
                     </div>
                 </div>
-            </div> <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
+            </div>
         </div>
     </body>
 </html>
