--- a/works/index.html
+++ b/works/index.html
@@ -160,9 +160,22 @@
                                 </video>
                             </div>
                         </div>
-                        <!-- BLANK BOX -->
-                        <div class="workbox">
+                        <div class="workbox"> <!-- Gremlin Burunout -->
+                            <h2>Gremlin Gif</h2>
+                            <div class="work_video" onmouseover="getElementById('burnout').play()" onmouseout="getElementById('burnout').pause()">
+                                <div class="works_captions">
+                                    <p>Created with Illustrator, After Effects.</p>
+                                    <div class="hover_preview">hover to preview</div>
+                                </div>
+                                <div class="thumbs" id="thumb-burnout"></div>
+                                <video muted preload disablepictureinpicture id="burnout" loop>
+                                    <source src="previews/burnout.webm" type="video/webm">Your browser does not support the video tag. Consider updating your browser.
+                                </video>
+                            </div>
                         </div>
+                        <!-- BLANK BOX -->
+                        <!-- <div class="workbox">
+                        </div> -->
                         <!-- END BLANK BOX -->
                     </div>
                 </div>
