Updated graphic design examples
Added new graphic design examples
Added back in enlarging lightbox functionality
Cleaned up folder structure

--- a/works/index.html
+++ b/works/index.html
@@ -31,6 +31,15 @@
     </head>
 
 	<body>
+        <!-- Image Previews -->
+        <div class="lightbox-target lightbox-target-inactive" id="neptuneice-full">
+            <div class="lightbox-close"></div>
+            <img src="design_files/full/neptuneice.png"/>
+        </div>
+        <div class="lightbox-target lightbox-target-inactive" id="mission-full">
+            <div class="lightbox-close"></div>
+            <img src="design_files/full/mission.png"/>
+        </div>
         <!-- Header -->
         <div class="header">
             <a href="../index.html" id="logo">
@@ -203,6 +212,22 @@
                             <div class="works_desc"><p>Created with Illustrator</p></div>
                         </div>
                         <div class="workbox">
+                            <h2>Neptune Ice Responsive Web Styling</h2>
+                            <a class="lightbox design_img" id="neptuneice">
+                                <img src="design_files/full/neptuneice_th.png"/>
+                                <div class="enlarge_text">click to enlarge</div>
+                            </a>
+                            <div class="works_desc"><p>CSS/HTML/Javascript/Liquid templates</p></div>
+                        </div>
+                        <div class="workbox">
+                            <h2>Mission Catalog Mockup</h2>
+                            <a class="lightbox design_img" id="mission">
+                                <img src="design_files/full/mission_th.png"/>
+                                <div class="enlarge_text">click to enlarge</div>
+                            </a>
+                            <div class="works_desc"><p>Created with InDesign, rendered in Dimension</p></div>
+                        </div>
+                        <div class="workbox">
                             <h2>Sandman Mascot Design</h2>
                             <a class="lightbox design_img" id="sandman">
                                 <img src="design_files/full/renderthesandman.png"/>
@@ -285,6 +310,10 @@
                                 <img src="design_files/full/astronaut.png"/>
                             </a>
                             <div class="works_desc"><p>Created with Illustrator</p></div>
+                        </div>
+                        <!-- BLANK BOX -->
+                        <div class="workbox">
+                            &nbsp;
                         </div>
                     </div>
                 </div>
