dl links for resume(s)
added links for pdf and docx resumes

--- a/resume/index.html
+++ b/resume/index.html
@@ -23,7 +23,7 @@
         <meta name="msapplication-config" content="../favicon/browserconfig.xml">
         <!-- Stylesheets -->
         <link rel="stylesheet" href="../main.css" type="text/css">
-        <link rel="stylesheet" href="resume.css" type="text/css"> <!--I need this line to show up-->
+        <link rel="stylesheet" href="resume.css" type="text/css">
     </head>
     <body>
         <div class="header">
@@ -60,6 +60,9 @@
             r&eacute;sum&eacute;
         </div>
         <div class="coral_bg">
+            <div class="dl-links-container">
+                <div id="resume-dl-links">Download: <a href="Résumé-J_Caleb_McTwigan.pdf" class="dl_link">PDF</a> | <a href="Résumé-J_Caleb_McTwigan.docx" class="dl_link">DOCX</a></div>
+            </div>
             <div class="section_container">
                 <table id="res_table">
                     <tr>
