resume link updates
- Updated resume link to ODT instead of DOCX for Word formatting
- Updated z-index of resume dl-links so they are clickable above the content section

--- a/resume/index.html
+++ b/resume/index.html
@@ -61,7 +61,7 @@
         </div>
         <div class="coral_bg">
             <div class="dl-links-container">
-                <div id="resume-dl-links">Download: <a href="Résumé-J_Caleb_McTwigan.pdf" class="dl_link">PDF</a> | <a href="Résumé-J_Caleb_McTwigan.docx" class="dl_link">DOCX</a></div>
+                <div id="resume-dl-links">Download: <a href="Résumé-J_Caleb_McTwigan.pdf" class="dl_link">PDF</a> | <a href="Résumé-J_Caleb_McTwigan.odt" class="dl_link">WORD/ODT</a></div>
             </div>
             <div class="section_container">
                 <table id="res_table">
