--- a/works/index.html
+++ b/works/index.html
@@ -205,9 +205,9 @@
                             <div class="works_desc"><p>Created with Illustrator, rendered in Dimension</p></div>
                         </div>
                         <div class="workbox">
-                            <h2>Illustration for Snapchat Filter</h2>
-                            <a class="lightbox design_img" id="conley">
-                                <img src="design_files/full/conley.png"/>
+                            <h2>Logo Design</h2>
+                            <a class="lightbox design_img" id="nerd">
+                                <img src="design_files/full/nerd.png"/>
                             </a>
                             <div class="works_desc"><p>Created with Illustrator</p></div>
                         </div>
@@ -218,6 +218,13 @@
                                 <div class="enlarge_text">click to enlarge</div>
                             </a>
                             <div class="works_desc"><p>CSS/HTML/Javascript/Liquid templates</p></div>
+                        </div>
+                        <div class="workbox">
+                            <h2>Illustration for Snapchat Filter</h2>
+                            <a class="lightbox design_img" id="conley">
+                                <img src="design_files/full/conley.png"/>
+                            </a>
+                            <div class="works_desc"><p>Created with Illustrator</p></div>
                         </div>
                         <div class="workbox">
                             <h2>Mission Catalog Mockup</h2>
