Updated graphic design works from JTA
4 more works added

--- a/works/index.html
+++ b/works/index.html
@@ -198,6 +198,13 @@
                 <div class="main_body_container">
                     <div class="works_container">
                         <div class="workbox">
+                            <h2>Annual Event Logo Designs</h2>
+                            <a class="lightbox design_img" id="roadeo">
+                                <img src="design_files/full/roadeo.png"/>
+                            </a>
+                            <div class="works_desc"><p>Created with Illustrator, rendered in Dimension</p></div>
+                        </div>
+                        <div class="workbox">
                             <h2>Custom Playing Cards</h2>
                             <a class="lightbox design_img" id="playingcards">
                                 <img src="design_files/full/playingcards.png"/>
@@ -212,12 +219,11 @@
                             <div class="works_desc"><p>Created with Illustrator</p></div>
                         </div>
                         <div class="workbox">
-                            <h2>Neptune Ice Responsive Web Styling</h2>
-                            <a class="lightbox design_img" id="neptuneice">
-                                <img src="design_files/full/neptuneice_th.png"/>
-                                <div class="enlarge_text">click to enlarge</div>
+                            <h2>Skyway Transit Map</h2>
+                            <a class="lightbox design_img" id="skyway">
+                                <img src="design_files/full/skyway.png"/>
                             </a>
-                            <div class="works_desc"><p>CSS/HTML/Javascript/Liquid templates</p></div>
+                            <div class="works_desc"><p>Created with TinkerCAD</p></div>
                         </div>
                         <div class="workbox">
                             <h2>Illustration for Snapchat Filter</h2>
@@ -225,6 +231,21 @@
                                 <img src="design_files/full/conley.png"/>
                             </a>
                             <div class="works_desc"><p>Created with Illustrator</p></div>
+                        </div>
+                        <div class="workbox">
+                            <h2>Safety Bus Wrap Design</h2>
+                            <a class="lightbox design_img" id="safetybuswrap">
+                                <img src="design_files/full/safetybuswrap.png"/>
+                            </a>
+                            <div class="works_desc"><p>Created with Illustrator</p></div>
+                        </div>
+                        <div class="workbox">
+                            <h2>Neptune Ice Responsive Web Styling</h2>
+                            <a class="lightbox design_img" id="neptuneice">
+                                <img src="design_files/full/neptuneice_th.png"/>
+                                <div class="enlarge_text">click to enlarge</div>
+                            </a>
+                            <div class="works_desc"><p>CSS/HTML/Javascript/Liquid templates</p></div>
                         </div>
                         <div class="workbox">
                             <h2>Mission Catalog Mockup</h2>
@@ -247,6 +268,13 @@
                                 <img src="design_files/full/renderthebacon.png"/>
                             </a>
                             <div class="works_desc"><p>Created with Illustrator and Photoshop</p></div>
+                        </div>
+                        <div class="workbox">
+                            <h2>Transit Plan Document</h2>
+                            <a class="lightbox design_img" id="phoenix">
+                                <img src="design_files/full/phoenix.png"/>
+                            </a>
+                            <div class="works_desc"><p>Created with Indesign, Illustrator, and Photoshop</p></div>
                         </div>
                         <div class="workbox">
                             <h2>Logo Design</h2>
