--- a/works/index.html
+++ b/works/index.html
@@ -198,7 +198,7 @@
                 <div class="main_body_container">
                     <div class="works_container">
                         <div class="workbox">
-                            <h2>Annual Event Logo Designs</h2>
+                            <h2>Annual Roadeo Event Logo Designs</h2>
                             <a class="lightbox design_img" id="roadeo">
                                 <img src="design_files/full/roadeo.png"/>
                             </a>
@@ -219,7 +219,7 @@
                             <div class="works_desc"><p>Created with Illustrator</p></div>
                         </div>
                         <div class="workbox">
-                            <h2>Skyway Transit Map</h2>
+                            <h2>3D Skyway Transit Map</h2>
                             <a class="lightbox design_img" id="skyway">
                                 <img src="design_files/full/skyway.png"/>
                             </a>
@@ -270,7 +270,7 @@
                             <div class="works_desc"><p>Created with Illustrator and Photoshop</p></div>
                         </div>
                         <div class="workbox">
-                            <h2>Transit Plan Document</h2>
+                            <h2>Transit Plan Document Design</h2>
                             <a class="lightbox design_img" id="phoenix">
                                 <img src="design_files/full/phoenix.png"/>
                             </a>
